--- a/the-store-threadly-frontend/src/index.css
+++ b/the-store-threadly-frontend/src/index.css
@@ -1,68 +1,79 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+    --color-white: #fff;
+    --color-red: #dc3545;
+    --color-gray: #4B5563;
+    --color-gray-light: #9CA3AF;
+    --color-gray-dark: #1F2937;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+/* ////////////////////////
+            HEADER
+//////////////////////// */
+#section-header .badge {
+    font-size: .6rem;
 }
-a:hover {
-  color: #535bf2;
+#section-header .logo{
+    max-width: 5rem;
 }
+#section-header .bi-cart-fill {
+    color: var(--color-gray);
+    transition: .3s;
+    font-size: 1.3rem;
+}
+#section-header .bi-cart-fill:hover {
+    color: var(--color-gray-dark);;
+}
+#section-header .bi-list {
+    font-size: 2rem;
+}
+#section-header .offcanvas.offcanvas-start {
+    width: 15rem;
+}
+#section-header .offcanvas-body {
+    padding: 0;
+}
+#section-header li {
+    position: relative;
+    display: inline-block;
+    padding: 12px 24px;
+    cursor: pointer;
+    overflow: hidden;
+    z-index: 1;
+}
+#section-header a {
+    font-weight: 600;
+}
+#section-header li::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-red);
+    z-index: -1;
+    transition: left 0.4s ease;
+}
+#section-header li:hover::before {
+    left: 0;
+}
+#section-header li:hover a {
+    color: var(--color-white);
+}
+#section-header.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    animation: showHeader ease .8s;
+    z-index: 999;
+}
+@keyframes showHeader {
+    0% {
+        transform: translate3d(0, -100%, 0);
+    }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+    100% {
+        transform: translate3d(0, 0, 0);
+    }
 }
