--- a/the-store-threadly-frontend/src/index.css
+++ b/the-store-threadly-frontend/src/index.css
@@ -4,11 +4,28 @@
     --color-gray: #4B5563;
     --color-gray-light: #9CA3AF;
     --color-gray-dark: #1F2937;
+
+    --bg-gray-light: #f5f5f5;
+
+    --bs-breakpoint-xs: 0;
+    --bs-breakpoint-sm: 576px;
+    --bs-breakpoint-md: 768px;
+    --bs-breakpoint-lg: 992px;
+    --bs-breakpoint-xl: 1200px;
+    --bs-breakpoint-xxl: 1400px;
 }
 
 /* ////////////////////////
             HEADER
 //////////////////////// */
+#section-header-wrapper {
+    height: 7rem;
+}
+#section-header {
+    transition: background-color .3s, padding .3s;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
 #section-header .badge {
     font-size: .6rem;
 }
@@ -67,6 +84,9 @@
     width: 100%;
     animation: showHeader ease .8s;
     z-index: 999;
+    background-color: var(--bg-gray-light);
+    padding-top: .5rem;
+    padding-bottom: .5rem;
 }
 @keyframes showHeader {
     0% {
@@ -75,5 +95,42 @@
 
     100% {
         transform: translate3d(0, 0, 0);
+    }
+}
+/* ////////////////////////
+            HERO
+//////////////////////// */
+#section-hero-slider .swiper img {
+    height: 500px;
+    width: 100%;
+    object-fit: cover;
+}
+@media (min-width:992px) {
+    #section-hero-slider .swiper img {
+        height: 700px;
+        width: 100%;
+        object-fit: cover;
+    }
+}
+#section-hero-slider  .swiper-pagination-bullet-active {
+    background-color: var(--color-red);
+}
+#section-hero-slider > div:first-of-type img {
+    height: 15rem;
+    width: 100%;
+    object-fit: cover;
+}
+/* ////////////////////////
+    FEATURED PRODUCTS
+//////////////////////// */
+#section-featured-product {
+    
+}
+/* ////////////////////////
+            PAGES
+//////////////////////// */
+@media (min-width:768px) {
+    #page {
+        padding: 0 5rem;
     }
 }
