--- a/the-store-threadly-frontend/src/components/buttons/ButtonPrimary.css
+++ b/the-store-threadly-frontend/src/components/buttons/ButtonPrimary.css
@@ -4,44 +4,60 @@
     align-items: center;
 }
 
-.button-primary {
-    background-color: #808080;
+.button-container .button-primary {
     color: white;
-    border: 2px solid #808080;
-    border-radius: .1rem;
+    border: 2px solid;
+    border-radius: 0.1rem;
     padding: 12px 24px;
     text-transform: uppercase;
     cursor: pointer;
     position: relative;
     overflow: hidden;
-    transition: color 0.4s, border-color 0.4s; 
-    z-index: 1; 
+    transition: color 0.4s, border-color 0.4s;
+    z-index: 1;
 }
 
-.button-primary.small {
-    font-size: .8rem;
+/* Size styles */
+.button-container .button-primary.small {
+    font-size: 0.8rem;
 }
-.button-primary.big {
-    font-size: .9rem;
+.button-container .button-primary.big {
+    font-size: 0.9rem;
 }
 
-.button-primary::before {
+/* Fill types */
+.button-container .button-primary.fill-secondary {
+    background-color: var(--color-gray);
+    border-color: var(--color-gray);
+}
+.button-container .button-primary.fill-secondary::before {
+    background-color: var(--color-red);
+}
+.button-container .button-primary.fill-secondary:hover {
+    border-color: var(--color-red);
+}
+
+.button-container .button-primary.fill-primary {
+    background-color: var(--color-red);
+    border-color: var(--color-red);
+}
+.button-container .button-primary.fill-primary::before {
+    background-color: var(--color-gray);
+}
+.button-container .button-primary.fill-primary:hover {
+    border-color: var(--color-gray);
+}
+
+.button-container .button-primary::before {
     content: '';
     position: absolute;
     top: 0;
     left: -100%;
     width: 100%;
     height: 100%;
-    background-color: var(--color-red); 
     transition: left 0.4s ease;
-    z-index: -1; 
+    z-index: -1;
 }
-
-.button-primary:hover::before {
-    left: 0; 
-}
-
-.button-primary:hover {
-    color: #fff; 
-    border-color: var(--color-red); 
+.button-container .button-primary:hover::before {
+    left: 0;
 }
