--- a/the-store-threadly-frontend/src/index.css
+++ b/the-store-threadly-frontend/src/index.css
@@ -14,6 +14,50 @@
     --bs-breakpoint-xl: 1200px;
     --bs-breakpoint-xxl: 1400px;
 }
+/* ////////////////////////
+        PRODUCTS ITEM
+//////////////////////// */
+.section-product-item img {
+    height: 18rem;
+    width: auto;
+    object-fit: contain;
+}
+.section-product-item i[class^="bi bi-star"] {
+    font-size: .8rem;
+    color: var(--color-red);
+}
+/* box */
+.section-product-item .icon-box i {
+    color: var(--color-gray);
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+.section-product-item .icon-box i:hover {
+    color: var(--color-red);
+}
+.section-product-item .icon-box-container {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translate(-50%, 100%);
+    opacity: 0;
+    transition: all 0.4s ease;
+    pointer-events: none;
+}
+.section-product-item:hover .icon-box-container {
+    transform: translate(-50%, 0);
+    opacity: 1;
+    pointer-events: auto;
+}
+/* ////////////////////////
+        SWIPPER
+//////////////////////// */
+.swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: var(--color-red);
+}
+
+
 
 /* ////////////////////////
             HEADER
@@ -117,55 +161,32 @@
         object-fit: cover;
     }
 }
-#section-hero-slider  .swiper-pagination-bullet-active {
-    background-color: var(--color-red);
-}
 #section-hero-slider > section > div:first-of-type img {
     height: 15rem;
     width: 100%;
     object-fit: cover;
 }
 /* ////////////////////////
-    FEATURED PRODUCTS
+    DISCOUNT PRODUCTS
 //////////////////////// */
-#section-featured-products {
-    
+#section-discount-products img {
+    height: 25rem;
+    width: 100%;
+    object-fit: cover;
+    filter: grayscale(100);
 }
-/* ////////////////////////
-        PRODUCTS ITEM
-//////////////////////// */
-.section-product-item img {
-    height: 18rem;
-    width: auto;
-    object-fit: contain;
+#section-discount-products .sale {
+    width: 7rem;
+    height: 7rem;
 }
-.section-product-item i[class^="bi bi-star"] {
-    font-size: .8rem;
-    color: var(--color-red);
-}
-/* box */
-.section-product-item .icon-box i {
-    color: var(--color-gray);
-    font-size: 1.2rem;
-    cursor: pointer;
-    transition: color 0.3s ease;
-}
-.section-product-item .icon-box i:hover {
-    color: var(--color-red);
-}
-.section-product-item .icon-box-container {
-    position: absolute;
-    bottom: 30px;
-    left: 50%;
-    transform: translate(-50%, 100%);
-    opacity: 0;
-    transition: all 0.4s ease;
-    pointer-events: none;
-}
-.section-product-item:hover .icon-box-container {
-    transform: translate(-50%, 0);
-    opacity: 1;
-    pointer-events: auto;
+#section-discount-products .sale span:nth-child(2) {
+    display: inline-block;
+    background-color: var(--color-white);
+    width: 25%;
+    margin-left: 40%;
+    height: .1rem;
+    margin-top: .3rem;
+    margin-bottom: .3rem;
 }
 /* ////////////////////////
             PAGES
