--- a/the-store-threadly-frontend/src/index.css
+++ b/the-store-threadly-frontend/src/index.css
@@ -1,6 +1,7 @@
 :root{
     --color-white: #fff;
     --color-red: #dc3545;
+    --color-red-light: #f8d7da;
     --color-gray: #4B5563;
     --color-gray-light: #9CA3AF;
     --color-gray-dark: #1F2937;
