--- a/the-store-threadly-frontend/src/index.css
+++ b/the-store-threadly-frontend/src/index.css
@@ -34,6 +34,9 @@ body {color: var(--bs-gray-800)}
     background-color: var(--bs-danger);
     border-color: var(--bs-danger);
 }
+.nav-pills .nav-link.active {background-color: var(--bs-danger);}
+.nav-pills .nav-link {color: var(--bs-danger);}
+.nav-pills .nav-link {color: var(--bs-danger);}
 /* ////////////////////////
         PRODUCTS ITEM
 //////////////////////// */
